<resources>
    <string name="app_name">Twitter Clone</string>
    <string name="has_account_question">Уже есть учетная запись?</string>
    <string name="login_text">Войти</string>
    <string name="signup_text">Создать учетную запись</string>
    <string name="main_activity_main_text">Узнайте, что происходит в мире прямо сейчас.</string>
    <string name="create_account_main_text">Создайте учетную запись</string>
    <string name="create_account_username_hint">Введите логин</string>
    <string name="create_account_password_hint">Введите пароль</string>
    <string name="create_account_email_hint">Введите почту</string>
    <string name="create_account_signup_text">Зарегистрироваться</string>
    <string name="login_main_text">Войдите в Твиттер</string>
    <string name="login_login_button">Войти</string>
    <string name="incorrect_email">Некорректный электронный адрес!</string>
    <string name="incorrect_username_password">Некорректное имя пользователя или пороль</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_messages">Messages</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_login">Логин</string>
    <string name="login_password">Пароль</string>
    <string name="create_account_email">Электронный адрес</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
